# frax

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: modeling_collision.md
docs/api/: robot.md
examples/: cbf_utils.py  example_utils.py  panda_diff_ik_demo.py  panda_osc_demo.py  panda_oscbf_demo.py
examples/xml/: obstacle_scene.xml  panda.xml  scene.xml
frax/: __init__.py
frax/assets/: __init__.py
frax/assets/franka_panda/: panda.urdf
frax/assets/franka_panda/bubblify/: panda_spherized.urdf  panda_spherized.yml
frax/assets/unitree_g1/: floating_g1_29dof_rev_1_0.urdf  g1_29dof_rev_1_0.urdf  g1_29dof_rev_1_0.xml
frax/assets/unitree_g1/bubblify/: g1_29dof_rev_1_0_spherized.urdf  g1_29dof_rev_1_0_spherized.yml
frax/core/: humanoid.py  manipulator.py  robot.py
frax/robots/: franka_panda.py  unitree_g1.py
frax/utils/: collision_utils.py  free_floating_utils.py  general_utils.py  linalg_utils.py  rotation_utils.py  spatial_utils.py  transform_utils.py  urdf_parser.py
frax/utils/sparsity/: README.md  fixed_root_linalg.py  freeflyer_root_linalg.py
frax/utils/urdfpy/: __init__.py  urdf.py  utils.py
scripts/: setup_cpu_env.sh  visualize_collision_model.py
tests/: test_forward_dynamics.py  test_humanoid_dynamics.py  test_humanoid_kinematics_speed.py  test_jacobians_and_derivatives.py  test_manipulator_dynamics.py  test_mass_matrix_inversion.py  test_math.py  test_rnea.py
