[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "frax"
version = "0.0.1"
description = "Fast Robot Kinematics and Dynamics in JAX"
authors = [{ name = "Daniel Morton", email = "danielpmorton@gmail.com" }]
readme = "README.md"
keywords = ["robot", "kinematics", "dynamics", "jax"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "jax",  # 0.4.30 recommended for best CPU performance
    "pyyaml",
    "networkx",
    "lxml",
]

[project.urls]
Repository = "https://github.com/danielpmorton/frax/"

[project.optional-dependencies]
cuda12 = ["jax[cuda12]"]
cuda13 = ["jax[cuda13]"]
tpu = ["jax[tpu]"]
dev = ["mkdocs-material", "mkdocstrings[python]", "ruff"]
test = ["pin==3.9.0", "mujoco==3.2.4", "mujoco-mjx==3.2.4", "brax==0.12.5", "flax==0.10.4"]
examples = ["mujoco", "cbfpy"]
all = ["mkdocs-material", "mkdocstrings[python]", "ruff", "pin", "mujoco", "mujoco-mjx", "brax"]

[tool.setuptools.packages.find]
include = ["frax*"]
