[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "frax"
version = "0.0.4"
description = "Fast Robot Kinematics and Dynamics in JAX"
authors = [{ name = "Daniel Morton", email = "danielpmorton@gmail.com" }]
readme = "README.md"
keywords = ["robot", "kinematics", "dynamics", "jax"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy",
    "jax",  # 0.4.30 recommended for best CPU performance
    "pyyaml",
    "networkx",
    "lxml",
]

[project.urls]
Repository = "https://github.com/StanfordASL/frax/"

[project.optional-dependencies]
cuda12 = ["jax[cuda12]"]
cuda13 = ["jax[cuda13]"]
tpu = ["jax[tpu]"]
dev = ["mkdocs-material", "mkdocstrings[python]", "ruff"]
examples = ["mujoco", "cbfpy"]
test = ["pin"]
all = ["mkdocs-material", "mkdocstrings[python]", "ruff", "pin", "mujoco", "cbfpy"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["frax*"]

[tool.setuptools.package-data]
frax = ["assets/**/*"]
